tests/files/invalid/lists/heterogenius_list.yumly
variable ;list[string] = [1, "two", "three", 4]